@@ -212,47 +212,53 @@ function App() {
         <div className={styles.App}>
             <section className={styles.AppContent}>
                 <div className={styles.AppSideBar}>
-                    <div>
-                        <header className={styles.AppHeader}>
-                            <div className={styles.AppIconHolder}>
-                                <img className={styles.AppIcon} src={logo} alt="Diablo 4"/>
-                            </div>
-                            <div className={styles.AppNameHolder}>
-                                <div className={styles.AppName}>Diablo IV Collection Log</div>
-                                <div className={styles.AppTagLine}>Bringing closure to the completionist in you.</div>
-                            </div>
-                            <div className={styles.AppSettings}>
-                                <button className={getConfigBtnClasses()} onClick={onToggleConfig}>
-                                    <svg
-                                        viewBox="0 -256 1792 1792"
-                                        width="100%"
-                                        height="100%">
-                                        <g
-                                            transform="matrix(1,0,0,-1,121.49153,1285.4237)"
-                                            id="g3027">
-                                            <path
-                                                d="m 1024,640 q 0,106 -75,181 -75,75 -181,75 -106,0 -181,-75 -75,-75 -75,-181 0,-106 75,-181 75,-75 181,-75 106,0 181,75 75,75 75,181 z m 512,109 V 527 q 0,-12 -8,-23 -8,-11 -20,-13 l -185,-28 q -19,-54 -39,-91 35,-50 107,-138 10,-12 10,-25 0,-13 -9,-23 -27,-37 -99,-108 -72,-71 -94,-71 -12,0 -26,9 l -138,108 q -44,-23 -91,-38 -16,-136 -29,-186 -7,-28 -36,-28 H 657 q -14,0 -24.5,8.5 Q 622,-111 621,-98 L 593,86 q -49,16 -90,37 L 362,16 Q 352,7 337,7 323,7 312,18 186,132 147,186 q -7,10 -7,23 0,12 8,23 15,21 51,66.5 36,45.5 54,70.5 -27,50 -41,99 L 29,495 Q 16,497 8,507.5 0,518 0,531 v 222 q 0,12 8,23 8,11 19,13 l 186,28 q 14,46 39,92 -40,57 -107,138 -10,12 -10,24 0,10 9,23 26,36 98.5,107.5 72.5,71.5 94.5,71.5 13,0 26,-10 l 138,-107 q 44,23 91,38 16,136 29,186 7,28 36,28 h 222 q 14,0 24.5,-8.5 Q 914,1391 915,1378 l 28,-184 q 49,-16 90,-37 l 142,107 q 9,9 24,9 13,0 25,-10 129,-119 165,-170 7,-8 7,-22 0,-12 -8,-23 -15,-21 -51,-66.5 -36,-45.5 -54,-70.5 26,-50 41,-98 l 183,-28 q 13,-2 21,-12.5 8,-10.5 8,-23.5 z"
-                                                id="path3029"/>
-                                        </g>
-                                    </svg>
-                                </button>
-                            </div>
-                        </header>
-                        {sideBar === SideBarType.ITEM && selectedItem &&
-                            <ItemSidebar
-                                item={selectedItem}
-                                hidden={store.isHidden(selectedItemId)}
-                                collected={store.isCollected(selectedItemId)}
-                                onClickCollected={() => store.toggle(selectedItemId, ItemFlag.COLLECTED)}
-                                onClickHidden={() => store.toggle(selectedItemId, ItemFlag.HIDDEN)}
-                            ></ItemSidebar>
-                        }
-                        {sideBar === SideBarType.CONFIG &&
-                            <ConfigSidebar
-                                config={config}
-                                onChange={onConfigChange}
-                            ></ConfigSidebar>
-                        }
+                    <div className={styles.AppSideBarContent}>
+                        <div className={styles.AppSideBarContentTop}>
+                            <header className={styles.AppHeader}>
+                                <div className={styles.AppIconHolder}>
+                                    <img className={styles.AppIcon} src={logo} alt="Diablo 4"/>
+                                </div>
+                                <div className={styles.AppNameHolder}>
+                                    <div className={styles.AppName}>Diablo IV Collection Log</div>
+                                    <div className={styles.AppTagLine}>Bringing closure to the completionist in you.</div>
+                                </div>
+                                <div className={styles.AppSettings}>
+                                    <button className={getConfigBtnClasses()} onClick={onToggleConfig}>
+                                        <svg
+                                            viewBox="0 -256 1792 1792"
+                                            width="100%"
+                                            height="100%">
+                                            <g
+                                                transform="matrix(1,0,0,-1,121.49153,1285.4237)"
+                                                id="g3027">
+                                                <path
+                                                    d="m 1024,640 q 0,106 -75,181 -75,75 -181,75 -106,0 -181,-75 -75,-75 -75,-181 0,-106 75,-181 75,-75 181,-75 106,0 181,75 75,75 75,181 z m 512,109 V 527 q 0,-12 -8,-23 -8,-11 -20,-13 l -185,-28 q -19,-54 -39,-91 35,-50 107,-138 10,-12 10,-25 0,-13 -9,-23 -27,-37 -99,-108 -72,-71 -94,-71 -12,0 -26,9 l -138,108 q -44,-23 -91,-38 -16,-136 -29,-186 -7,-28 -36,-28 H 657 q -14,0 -24.5,8.5 Q 622,-111 621,-98 L 593,86 q -49,16 -90,37 L 362,16 Q 352,7 337,7 323,7 312,18 186,132 147,186 q -7,10 -7,23 0,12 8,23 15,21 51,66.5 36,45.5 54,70.5 -27,50 -41,99 L 29,495 Q 16,497 8,507.5 0,518 0,531 v 222 q 0,12 8,23 8,11 19,13 l 186,28 q 14,46 39,92 -40,57 -107,138 -10,12 -10,24 0,10 9,23 26,36 98.5,107.5 72.5,71.5 94.5,71.5 13,0 26,-10 l 138,-107 q 44,23 91,38 16,136 29,186 7,28 36,28 h 222 q 14,0 24.5,-8.5 Q 914,1391 915,1378 l 28,-184 q 49,-16 90,-37 l 142,107 q 9,9 24,9 13,0 25,-10 129,-119 165,-170 7,-8 7,-22 0,-12 -8,-23 -15,-21 -51,-66.5 -36,-45.5 -54,-70.5 26,-50 41,-98 l 183,-28 q 13,-2 21,-12.5 8,-10.5 8,-23.5 z"
+                                                    id="path3029"/>
+                                            </g>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </header>
+                            {sideBar === SideBarType.ITEM && selectedItem &&
+                                <ItemSidebar
+                                    item={selectedItem}
+                                    hidden={store.isHidden(selectedItemId)}
+                                    collected={store.isCollected(selectedItemId)}
+                                    onClickCollected={() => store.toggle(selectedItemId, ItemFlag.COLLECTED)}
+                                    onClickHidden={() => store.toggle(selectedItemId, ItemFlag.HIDDEN)}
+                                ></ItemSidebar>
+                            }
+                            {sideBar === SideBarType.CONFIG &&
+                                <ConfigSidebar
+                                    config={config}
+                                    onChange={onConfigChange}
+                                ></ConfigSidebar>
+                            }
+                        </div>
+                        <div className={styles.AppSideBarContentBottom}>
+                            <Discord></Discord>
+                            <VersionInfo></VersionInfo>
+                        </div>
                     </div>
                 </div>
                 <div className={styles.AppContentMain}>
@@ -275,29 +281,41 @@ function App() {
             </section>
             <footer className={styles.AppFooter}>
                 <div className={styles.AppFooterItem}>
-                    <div className={styles.AppFooterSiteMeta}>
-                        <div>Site Version: <code>{SITE_VERSION}</code></div>
-                        <div>Last updated {LAST_UPDATED}</div>
-                    </div>
+                    <Discord></Discord>
                 </div>
                 <div className={styles.AppFooterItem}>
-                    <div className={styles.AppFooterDiscord}>
-                        <div className={styles.AppFooterDiscordIcon}>
-                            <a href={DISCORD_INVITE_LINK}>
-                                <svg stroke="currentColor" fill="#7289da" stroke-width="0" viewBox="0 0 640 512"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M524.531,69.836a1.5,1.5,0,0,0-.764-.7A485.065,485.065,0,0,0,404.081,32.03a1.816,1.816,0,0,0-1.923.91,337.461,337.461,0,0,0-14.9,30.6,447.848,447.848,0,0,0-134.426,0,309.541,309.541,0,0,0-15.135-30.6,1.89,1.89,0,0,0-1.924-.91A483.689,483.689,0,0,0,116.085,69.137a1.712,1.712,0,0,0-.788.676C39.068,183.651,18.186,294.69,28.43,404.354a2.016,2.016,0,0,0,.765,1.375A487.666,487.666,0,0,0,176.02,479.918a1.9,1.9,0,0,0,2.063-.676A348.2,348.2,0,0,0,208.12,430.4a1.86,1.86,0,0,0-1.019-2.588,321.173,321.173,0,0,1-45.868-21.853,1.885,1.885,0,0,1-.185-3.126c3.082-2.309,6.166-4.711,9.109-7.137a1.819,1.819,0,0,1,1.9-.256c96.229,43.917,200.41,43.917,295.5,0a1.812,1.812,0,0,1,1.924.233c2.944,2.426,6.027,4.851,9.132,7.16a1.884,1.884,0,0,1-.162,3.126,301.407,301.407,0,0,1-45.89,21.83,1.875,1.875,0,0,0-1,2.611,391.055,391.055,0,0,0,30.014,48.815,1.864,1.864,0,0,0,2.063.7A486.048,486.048,0,0,0,610.7,405.729a1.882,1.882,0,0,0,.765-1.352C623.729,277.594,590.933,167.465,524.531,69.836ZM222.491,337.58c-28.972,0-52.844-26.587-52.844-59.239S193.056,219.1,222.491,219.1c29.665,0,53.306,26.82,52.843,59.239C275.334,310.993,251.924,337.58,222.491,337.58Zm195.38,0c-28.971,0-52.843-26.587-52.843-59.239S388.437,219.1,417.871,219.1c29.667,0,53.307,26.82,52.844,59.239C470.715,310.993,447.538,337.58,417.871,337.58Z"></path>
-                                </svg>
-                            </a>
-                        </div>
-                        <div className={styles.AppFooterDiscordInfo}>
-                            <a className={styles.AppFooterDiscordLink} href={DISCORD_INVITE_LINK}>Join the Discord Server</a>
-                            <div className={styles.AppFooterDiscordInfoSlugs}>Patch Notes | Job Board | Bragging</div>
-                        </div>
-                    </div>
+                    <VersionInfo></VersionInfo>
                 </div>
             </footer>
+        </div>
+    );
+}
+
+function VersionInfo() {
+    return (
+        <div className={styles.AppFooterSiteMeta}>
+            <div>Last updated {LAST_UPDATED}</div>
+            <div>Site Version <code>{SITE_VERSION}</code></div>
+        </div>
+    );
+}
+
+function Discord() {
+    return (
+        <div className={styles.AppFooterDiscord}>
+            <div className={styles.AppFooterDiscordIcon}>
+                <a href={DISCORD_INVITE_LINK}>
+                    <svg stroke="currentColor" fill="#7289da" stroke-width="0" viewBox="0 0 640 512"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M524.531,69.836a1.5,1.5,0,0,0-.764-.7A485.065,485.065,0,0,0,404.081,32.03a1.816,1.816,0,0,0-1.923.91,337.461,337.461,0,0,0-14.9,30.6,447.848,447.848,0,0,0-134.426,0,309.541,309.541,0,0,0-15.135-30.6,1.89,1.89,0,0,0-1.924-.91A483.689,483.689,0,0,0,116.085,69.137a1.712,1.712,0,0,0-.788.676C39.068,183.651,18.186,294.69,28.43,404.354a2.016,2.016,0,0,0,.765,1.375A487.666,487.666,0,0,0,176.02,479.918a1.9,1.9,0,0,0,2.063-.676A348.2,348.2,0,0,0,208.12,430.4a1.86,1.86,0,0,0-1.019-2.588,321.173,321.173,0,0,1-45.868-21.853,1.885,1.885,0,0,1-.185-3.126c3.082-2.309,6.166-4.711,9.109-7.137a1.819,1.819,0,0,1,1.9-.256c96.229,43.917,200.41,43.917,295.5,0a1.812,1.812,0,0,1,1.924.233c2.944,2.426,6.027,4.851,9.132,7.16a1.884,1.884,0,0,1-.162,3.126,301.407,301.407,0,0,1-45.89,21.83,1.875,1.875,0,0,0-1,2.611,391.055,391.055,0,0,0,30.014,48.815,1.864,1.864,0,0,0,2.063.7A486.048,486.048,0,0,0,610.7,405.729a1.882,1.882,0,0,0,.765-1.352C623.729,277.594,590.933,167.465,524.531,69.836ZM222.491,337.58c-28.972,0-52.844-26.587-52.844-59.239S193.056,219.1,222.491,219.1c29.665,0,53.306,26.82,52.843,59.239C275.334,310.993,251.924,337.58,222.491,337.58Zm195.38,0c-28.971,0-52.843-26.587-52.843-59.239S388.437,219.1,417.871,219.1c29.667,0,53.307,26.82,52.844,59.239C470.715,310.993,447.538,337.58,417.871,337.58Z"></path>
+                    </svg>
+                </a>
+            </div>
+            <div className={styles.AppFooterDiscordInfo}>
+                <a className={styles.AppFooterDiscordLink} href={DISCORD_INVITE_LINK}>Join the Discord Server</a>
+                <div className={styles.AppFooterDiscordInfoSlugs}>Patch Notes | Job Board | Bragging</div>
+            </div>
         </div>
     );
 }
